<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flex_bt_turtlebot3_demo_bringup</name>
  <version>0.0.0</version>
  <description>
    Demonstration package for flexible_behavior_trees using ROS 2 Navigation 2 and TurtleBot3 simulation
  </description>
  <author email="joshua.zutell.18@cnu.edu">jmz919</author>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>Apache 2.0</license>
  <url type="bugtracker">https://github.com/FlexBE/flex_bt_turtlebot3_demo/issues</url>
  <url type="repository">https://github.com/FlexBE/flex_bt_turtlebot3_demo</url>
  <url type="website">https://github.com/FlexBE/flex_bt_turtlebot3_demo</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>turtlebot3</depend>
  <depend>flexbe_behavior_engine</depend>
  <depend>flexbe_app</depend>
  <depend>flexible_behavior_trees</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
