<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>flex_bt_turtlebot_demo_bt</name>
	<version>0.3.0</version>
	<description>

		Demonstration package for flexible_behavior_trees using ROS 2 Navigation 2 and TurtleBot3 simulation

	</description>
	<author email="joshua.zutell.18@cnu.edu">jmz919</author>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>Apache 2.0</license>
  <url type="bugtracker">https://github.com/FlexBE/flex_bt_turtlebot_demo/issues</url>
  <url type="repository">https://github.com/FlexBE/flex_bt_turtlebot_demo</url>
  <url type="website">https://github.com/FlexBE/flex_bt_turtlebot_demo</url>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<build_depend>nav2_common</build_depend>
	<build_depend>rosidl_default_generators</build_depend>
	<build_depend>message_runtime</build_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>pluginlib</build_depend>
	<build_depend>nav2_behavior_tree</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>behaviortree_cpp_v3</build_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

	<export>
    	<build_type>ament_cmake</build_type>
  </export>
</package>
