<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>flex_bt_turtlebot_demo_flexbe_states</name>
	<version>0.3.0</version>
	<description>
		FlexBE states related to demonstration of flexible_behavior_trees system using Navigation 2 and Turtlebot3 simulation
	</description>
	<author email="joshua.zutell.18@cnu.edu">jmz919</author>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>Apache 2.0</license>
  <url type="bugtracker">https://github.com/FlexBE/flex_bt_turtlebot_demo/issues</url>
  <url type="repository">https://github.com/FlexBE/flex_bt_turtlebot_demo</url>
  <url type="website">https://github.com/FlexBE/flex_bt_turtlebot_demo</url>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclpy</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>flexbe_msgs</depend>
	<depend>flexbe_core</depend>

	<test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<export>
			<build_type>ament_cmake</build_type>
	    <flexbe_states />
	</export>

</package>
